[Fix] Input gap changes

--- a/styles/main.css
+++ b/styles/main.css
@@ -139,7 +139,7 @@ body {
         width: 100%;
         display: flex;
         align-items: center;
-        /*justify-content: space-between;*/
+        justify-content: center;
         padding: 10px;
         /*border: 1px solid ;*/
         gap: 0.5rem;
